test/syntaxerrors/TestBadConcatenation.jdc
String name = "Bob";

println("Hello " name);